unpackaged/objects/TTT_Game_Area__c.object
<CustomObject>
    <description>This will hold current active game information</description>
    <fields>
        <fullName>TTT_Player_One_Id__c</fullName>
        <description>This is a unique identifier which is a concatenation of user id + lobby id against which user registered</description>
        <label>Player One Unique Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TTT_Player_One__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This will hold user id for player one</description>
        <label>Player One</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Game_Area</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TTT_Player_Two_Id__c</fullName>
        <description>This is a unique identifier which is a concatenation of user id + lobby id against which the user registered</description>
        <label>Player Two Unique Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TTT_Player_Two__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This will hold user id for player two</description>
        <label>Player Two</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Game_Area1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Game Area</label>
    <nameField>
        <displayFormat>GA-{0000}</displayFormat>
        <label>Game Area Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Game Area</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>